Working on debugging stockfish errors on mac